overflow y fix

--- a/projects/book-shop/css/main.css
+++ b/projects/book-shop/css/main.css
@@ -1,5 +1,6 @@
 body{
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y:auto;
     direction: ltr;
     background:fixed;
     background-repeat: no-repeat;
